# PMcore

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bimodal_ke_time_comparison_results.txt  bke_prior.csv  compare.sh  config.toml  crates.js  epa.txt  help.html  iiv.md  index.html  meta_rust.csv  n_psi.csv  posterior.csv  pred.csv  psi.csv  psi_cache.csv  r.csv  search-index.js  settings.html  settings.json  simulated_values.csv  simulation_output.csv  source-files.js  src-files.js  test.sh  theta.csv  vpicu.csv.editing.csv
.config/: nextest.toml
.github/: dependabot.yml
Fortran/: BESTDOS121.FOR  CALCBST15.FOR  IDM1X15.FOR  IDM3X151.FOR  NPAGFULLA.FOR  NPAGFULLA11.FOR  Template_meta.json  buildDoser.R
PMcore/: output.txt
algorithms/: BestDose_AUC_Issue_Analysis.md  BestDose_Fix_Plan.md  BestDose_Infusion_Support_Diagrams.md  BestDose_Infusion_Support_Plan.md  BestDose_Infusion_Support_Summary.md  BestDose_Refactoring.md  BestDose_algorithm.md  Burke_vs_Emint_Analysis.md  Concatenation_and_Masking_Analysis.md  Cost_Function_Fix.md  CurrentTime_Investigation.md  FORTRAN_NPAG_Detailed_Analysis.md  FORTRAN_vs_RUST_NPAG_Comparison.md  Flowcharts.md  Implementation_Proposal.md  Mixed_Dose_Analysis.md  NPAGFULL_Implementation_Complete.md  NPAGFULL_overview.md  NPAG_Comparison_Executive_Summary.md  NPAG_Complete_Analysis_Summary.md  NPAG_Implementation_Differences_Status.md  QR_Pivot_Ordering_Analysis.md  README.md  RUST_NPAG_Detailed_Analysis.md  Rust_BestDose_Fixes.md  Rust_vs_Fortran_NPAG.md  Testing_and_Next_Steps.md
approx/: trait.AbsDiffEq.html  trait.RelativeEq.html  trait.UlpsEq.html
arc_swap/: all.html  index.html  struct.ArcSwapAny.html  struct.Guard.html  trait.AsRaw.html  trait.RefCnt.html  type.ArcSwap.html  type.ArcSwapOption.html
argmin_math/: trait.ArgminAdd.html  trait.ArgminConj.html  trait.ArgminDiv.html  trait.ArgminDot.html  trait.ArgminL1Norm.html  trait.ArgminL2Norm.html  trait.ArgminMul.html  trait.ArgminRandom.html  trait.ArgminSub.html  trait.ArgminTranspose.html  trait.ArgminZero.html  trait.ArgminZeroLike.html
benches/: benchmarks.rs  bimodal_ke.rs  compare.rs  evaluation  evaluation.rs  expansion.rs  initialization.rs  main.rs  saem.rs  weights.rs
bytemuck/: all.html  enum.PodCastError.html  index.html  trait.Contiguous.html  trait.NoUninit.html  trait.Pod.html  trait.PodInOption.html  trait.Zeroable.html  trait.ZeroableInOption.html
cassowary/: all.html  enum.AddConstraintError.html  enum.AddEditVariableError.html  enum.RelationalOperator.html  enum.RemoveConstraintError.html  enum.RemoveEditVariableError.html  enum.SuggestValueError.html  enum.WeightedRelation.html  index.html  sidebar-items.js  struct.Constraint.html  struct.Expression.html  struct.PartialConstraint.html  struct.Solver.html  struct.Term.html  struct.Variable.html
chrono/: all.html  enum.Month.html  enum.Weekday.html  index.html  struct.Date.html  struct.DateTime.html  struct.Duration.html  struct.Months.html  struct.OutOfRange.html
crossterm/: all.html  index.html  macro.execute.html  macro.queue.html  trait.Command.html  trait.ExecutableCommand.html  trait.QueueableCommand.html  trait.SynchronizedUpdate.html  type.ErrorKind.html  type.Result.html
csv/: struct.ByteRecord.html  struct.DeserializeError.html  struct.Error.html  struct.FromUtf8Error.html  struct.StringRecord.html
csv_core/: enum.QuoteStyle.html  enum.ReadFieldNoCopyResult.html  enum.ReadFieldResult.html  enum.ReadRecordNoCopyResult.html  enum.ReadRecordResult.html  enum.Terminator.html  enum.WriteResult.html  fn.is_non_numeric.html  fn.quote.html  struct.Reader.html  struct.ReaderBuilder.html  struct.Writer.html  struct.WriterBuilder.html
dashmap/: index.html  struct.DashMap.html  struct.ReadOnlyView.html  struct.TryReserveError.html  trait.Map.html
destructure_traitobject/: all.html  fn.data.html  fn.data_mut.html  index.html  trait.Trait.html
docs/: algorithms_mathematical_writeup.md  nonmem-comparison.md  optimizers_for_weights.md  saem-convergence.md  saem-support.md
examples/: add_zero_rows.rs  bayes_risk.rs  bestdose.rs  bestdose_auc.rs  bestdose_bounds.rs  bestdose_cov.rs  bestdose_posterior.rs  big_qr_decomp.rs  bimodal_ke.rs  bimodal_ke.toml  bimodal_ke_backend_compare.rs  bimodal_ke_saem.rs  chain_algorithms.rs  cholesky.rs  column_permutation.rs  compare_algorithms.rs  compare_npsah.rs  debug.rs  destructure_array.rs  diffsol.rs  dynstack.rs  error.rs  error.toml  faer_qr.rs  iov_analysis.rs  iov_calibrate.rs  iov_compare.rs  iov_verify.rs  ipm.rs  ipm_test.rs  mmopt.rs  neldermead.rs  new_data.rs  new_settings.rs  new_settings.toml  new_simulator.rs  paper_benchmarks.rs  parse_pmetrics.rs  qr.rs  qr_decomposition.rs  (+12 more)
itertools/: all.html  enum.Either.html  index.html  trait.Itertools.html  trait.PeekingNext.html
linfa_linalg/: all.html  enum.LinalgError.html  enum.Order.html  index.html  sidebar-items.js  type.Result.html
log/: enum.Level.html  enum.LevelFilter.html  trait.Log.html
log4rs/: all.html  index.html  sidebar-items.js  struct.Handle.html  struct.Logger.html
log_mdc/: all.html  fn.clear.html  fn.extend.html  fn.extend_scoped.html  fn.get.html  fn.insert.html  fn.insert_scoped.html  fn.iter.html  fn.remove.html  index.html  sidebar-items.js  struct.ExtendGuard.html  struct.InsertGuard.html
matrixmultiply/: all.html  (+6 more)
(+7580 files in other folders)
