[package]
name = "pmcore"
version = "0.20.0"
edition = "2021"
authors = [
    "Julián D. Otálvaro <juliandavid347@gmail.com>",
    "Markus Hovd",
    "Michael Neely",
    "Walter Yamada",
]
description = "Rust library with the building blocks needed to create new Non-Parametric algorithms and its integration with Pmetrics."
license = "GPL-3.0"
documentation = "https://lapkb.github.io/PMcore/pmcore/"
repository = "https://github.com/LAPKB/PMcore"
exclude = [".github/*", ".vscode/*"]

[dependencies]
csv = "1.3.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
serde = "1.0.188"
serde_json = "1.0.66"
sobol_burley = "0.5.0"
argmin = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "time",
] }
faer = "0.23.1"
faer-ext = { version = "0.7.1", features = ["nalgebra", "ndarray"] }
pharmsol = "=0.19.0"
rand = "0.9.0"
anyhow = "1.0.97"
rayon = "1.10.0"
argmin-math = "0.5.0"

[features]
default = []
exa = ["pharmsol/exa"]

[profile.release]
codegen-units = 1
opt-level = 3

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.7" }

[[bench]]
name = "bimodal_ke"
harness = false
