[package]
name = "pmcore"
version = "0.26.1"
edition = "2021"
authors = [
  "Julián D. Otálvaro <juliandavid347@gmail.com>",
  "Markus Hovd",
  "Michael Neely",
  "Walter Yamada",
]
description = "Population pharmacokinetic estimation with nonparametric algorithms, SAEM, and SDE particle filtering."
license = "GPL-3.0"
documentation = "https://lapkb.github.io/PMcore/pmcore/"
repository = "https://github.com/LAPKB/PMcore"
include = [
  "/Cargo.toml",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/iiv.md",
  "/docs/saem-support.md",
  "/docs/saem-convergence.md",
  "/docs/nonmem-comparison.md",
  "/src/**",
  "/tests/*.rs",
  "/tests/fixtures/**",
  "/benches/*.rs",
  "/examples/bestdose/main.rs",
  "/examples/bimodal_ke/main.rs",
  "/examples/bimodal_ke/bimodal_ke.csv",
  "/examples/bimodal_ke_backend_compare.rs",
  "/examples/bimodal_ke_saem.rs",
  "/examples/chain_algorithms.rs",
  "/examples/drusano/main.rs",
  "/examples/drusano/data.csv",
  "/examples/iov/main.rs",
  "/examples/iov/test.csv",
  "/examples/meta/main.rs",
  "/examples/meta/meta.csv",
  "/examples/meta_saem/main.rs",
  "/examples/neely/main.rs",
  "/examples/neely/data.csv",
  "/examples/new_iov/main.rs",
  "/examples/new_iov/data.csv",
  "/examples/theophylline/main.rs",
  "/examples/theophylline/theophylline.csv",
  "/examples/two_eq_lag/main.rs",
  "/examples/two_eq_lag/two_eq_lag.csv",
  "/examples/vanco.rs",
  "/examples/vanco_sde/main.rs",
  "/examples/vanco_sde/vanco_clean.csv",
]

[dependencies]
csv = "1.3.1"
ndarray = { version = "0.17.2", features = ["rayon", "serde"] }
serde = "1.0.188"
serde_json = "1.0.66"
sobol_burley = "0.5.0"
argmin = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "fmt",
  "time",
] }
faer = "0.24.0"
pharmsol = { path = "../pharmsol-likelihood-ownership", version = "=0.28.2" }
anyhow = "1.0.100"
statrs = "0.18.0"
rayon = "1.10.0"
rand = "0.10.1"
rand_distr = "0.6.0"
ahash = "0.8.12"
thiserror = "2.0.18"

[features]
default = []
json = []
exa = []
dsl-core = ["pharmsol/dsl-core"]
dsl-jit = ["pharmsol/dsl-jit"]
dsl-aot = ["pharmsol/dsl-aot"]
dsl-aot-load = ["pharmsol/dsl-aot-load"]
dsl-wasm = ["pharmsol/dsl-wasm"]

[profile.release]
codegen-units = 1
opt-level = 3

[profile.test]
inherits = "release"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.8" }
faer = "0.24.0"

[[bench]]
name = "bimodal_ke"
harness = false

[[bench]]
name = "saem"
harness = false

# The BestDose example defines its model from a DSL text string, which requires
# a runtime DSL backend. Build/run it with: `--features dsl-jit`.
[[example]]
name = "bestdose"
path = "examples/bestdose/main.rs"
required-features = ["dsl-jit"]
